[project]
name = "prometheus-distributed-client"
version = "2.1.5"
description = ""
author = {name="François Schmidts", email="francois@schmidts.fr"}
license = "GPLv3"
readme = "README.md"
packages = [{include = "prometheus_distributed_client"}]
requires-python= ">=3.10,<4.0"
dependencies = [
    "prometheus-client==0.23.*",
    "redis>=5",
]

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mock = "^5.0.1"
pycodestyle = "^2.14.0"
flake8 = "^7.3.0"
pylint = "^4.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 79
